tests/baselines/reference/moduleAsBaseType.errors.txt
tests/cases/compiler/moduleAsBaseType.ts(2,17): error TS2304: Cannot find name 'M'.
tests/cases/compiler/moduleAsBaseType.ts(3,21): error TS2304: Cannot find name 'M'.
tests/cases/compiler/moduleAsBaseType.ts(4,21): error TS2304: Cannot find name 'M'.


==== tests/cases/compiler/moduleAsBaseType.ts (3 errors) ====
    module M {}
    class C extends M {}
                    ~
!!! error TS2304: Cannot find name 'M'.
    interface I extends M { }
                        ~
!!! error TS2304: Cannot find name 'M'.
    class C2 implements M { }
                        ~
!!! error TS2304: Cannot find name 'M'.